hubSide/force-app/main/default/objects/Reception_colis__c/Reception_colis__c.object-meta.xml
<CustomObject>
    <description>Table permettant d&apos;avoir une idée du nombre de colis reçu dans la journée / dans un batch donné</description>
    <label>Réception colis</label>
    <nameField>
        <label>Réception colis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Réceptions colis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>