hubSide/force-app/main/default/objects/Reception_colis__c/fields/BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>BatchNumber__c</fullName>
    <description>Numéro du lot reçu - Received batch number</description>
    <formula>&apos;Lot &apos; +  TEXT(Tech_BatchNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de lot</label>
    <type>Text</type>
</CustomField>