hubSide/force-app/main/default/objects/Reception_colis__c/fields/BordereauLivraison_pdf__c.field-meta.xml
<CustomField>
    <fullName>BordereauLivraison_pdf__c</fullName>
    <formula>HYPERLINK(&quot;/apex/Sinistre_BordereauColis?id=&quot; &amp;  Id, &quot;BordereauLivraison.pdf&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BordereauLivraison.pdf</label>
    <type>Text</type>
</CustomField>