hubSide/force-app/main/default/objects/Reception_colis__c/fields/Date_reception__c.field-meta.xml
<CustomField>
    <fullName>Date_reception__c</fullName>
    <description>Date de réception du batch de colis</description>
    <label>Date de réception</label>
    <type>Date</type>
</CustomField>