hubSide/force-app/main/default/objects/Reception_colis__c/fields/Nombre_colis_recus__c.field-meta.xml
<CustomField>
    <fullName>Nombre_colis_recus__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de colis reçu d&apos;après le bon de livraison du transporteur.</description>
    <label>Nombre de colis reçus</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>