hubSide/force-app/main/default/objects/Reception_colis__c/fields/Nombre_colis_scannes__c.field-meta.xml
<CustomField>
    <fullName>Nombre_colis_scannes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de colis scannés par la SFAM</description>
    <label>Nombre de colis scannés</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>