hubSide/force-app/main/default/objects/Reception_colis__c/fields/Tech_BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>Tech_BatchNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Numéro s&apos;incrémentant pour distinguer les différents lots reçu lors d&apos;une même journée - Incrementing integer to differentiate batches received on a same day.</description>
    <label>Tech_NumeroLot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>