hubSide/force-app/main/default/objects/Reception_colis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_reception__c</columns>
    <columns>Nom_transporteur__c</columns>
    <columns>Nombre_colis_recus__c</columns>
    <columns>Nombre_colis_scannes__c</columns>
    <columns>BordereauLivraison_pdf__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>