hubSide/force-app/main/default/objects/Reception_colis__c/listViews/Synthese_des_colis_recus.listView-meta.xml
<ListView>
    <fullName>Synthese_des_colis_recus</fullName>
    <columns>NAME</columns>
    <columns>BatchNumber__c</columns>
    <columns>Date_reception__c</columns>
    <columns>Nom_transporteur__c</columns>
    <columns>Nombre_colis_recus__c</columns>
    <columns>Nombre_colis_scannes__c</columns>
    <columns>BordereauLivraison_pdf__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nom_transporteur__c</field>
        <operation>notEqual</operation>
        <value>BulkParcelsSav,BulkParcelsReparation</value>
    </filters>
    <label>Synthèse des colis reçus</label>
</ListView>